@@ -1,5 +1,7 @@
 2.0.15
 ======
+- Modified Link URL generation in @{...} expressions in order to use response.encodeURL(...) instead
+  of always adding jsessionid, for better web container integration.
 - Divide "processOnlyElementNodes" flag in Arguments into two different flags (processTextNodes
   and processCommentNodes) in order to allow activation of text/comment processing separately.
   
